<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/invoice_yjdh_sqdh"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:contextClickable="false"
            android:ems="10"
            android:clickable="true"
            android:filterTouchesWhenObscured="false"
            android:hint="@string/invoice_yjdh_hint"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="18sp"
            android:theme="@style/MyEditText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/invoice_yjdh_tjsj_start"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText

            android:id="@+id/xcdk_start_tab3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/iinvoice_yjdh_tjsj_start_hint"
            android:textAlignment="center"
            android:textSize="18sp"
            android:inputType="none"
        android:theme="@style/MyEditText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/invoice_yjdh_tjsj_end"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/xcdk_end_tab3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:hint="@string/iinvoice_yjdh_tjsj_end_hint"
            android:inputType="none"
            android:textAlignment="center"
            android:textSize="18sp"
            android:theme="@style/MyEditText" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/invoice_yjdh_form_status"
            android:textAlignment="center"
            android:textSize="18sp" />

        <!--  <EditText
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="3"
              android:ems="10"
              android:hint="@string/iinvoice_yjdh_sel"
              android:inputType="number"
              android:textAlignment="center"
              android:theme="@style/MyEditText"
              android:textSize="14sp" />-->

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:entries="@array/spingarr"
            android:textAlignment="center" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/search_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:src="@drawable/selector_invoice_yjdk_search_btn" />

        <ImageView
            android:id="@+id/reset_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:src="@drawable/selector_invoice_yjdk_reset_btn" />

    </LinearLayout>
</LinearLayout>