<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="0dp"

    android:focusable="true"
    android:focusableInTouchMode="true"

    tools:context="com.visioncatcher.tax.nationaltax.ui.activity.LoginActivity">


    <FrameLayout
        android:id="@+id/head_framelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="0dp"
            android:paddingTop="0dp"
            android:src="@drawable/head_img" />
        <ImageView
            android:id="@+id/login_close_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/image_btn_press" />

    </FrameLayout>


    <FrameLayout
        android:id="@+id/uname_framelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head_framelayout"
        android:layout_marginTop="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/uname" />

        <EditText
            android:id="@+id/uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/uname_hint"
            android:paddingLeft="40dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:theme="@style/MyEditText" />

    </FrameLayout>

    <TextView
        android:id="@+id/login_prompt_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uname_framelayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/login_prompt" />

    <FrameLayout
        android:id="@+id/pwd_framelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_prompt_txt"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/pwd_hint"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="18sp"
            android:theme="@style/MyEditText" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/pwd" />
    </FrameLayout>

    <TextView
        android:id="@+id/forgot_pwd_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/pwd_framelayout"
        android:layout_below="@+id/pwd_framelayout"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorMain"
        android:textColorLink="@color/editTextActivated"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/forgot_pwd_txt"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/selector_login_btn"
        android:scaleType="fitCenter" />


    <TextView
        android:id="@+id/regist_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/regist_user"
        android:textColor="@color/colorMain"
        android:textColorLink="@color/colorMain"
        android:textSize="18sp" />


</RelativeLayout>
